[gd_scene load_steps=5 format=3 uid="uid://i3kqa10tdkbg"]

[ext_resource type="Script" path="res://main.gd" id="1_tpova"]
[ext_resource type="PackedScene" uid="uid://b5ugb4pqrpmjh" path="res://simulation/simulation.tscn" id="2_e5q61"]
[ext_resource type="PackedScene" uid="uid://dlfn31rere5p8" path="res://ui/car_properties/car_properties.tscn" id="3_p70h6"]
[ext_resource type="PackedScene" uid="uid://8nr0ds835skk" path="res://ui/graph/graphs.tscn" id="4_cl0n0"]

[node name="Main" type="Control" node_paths=PackedStringArray("car_a", "car_b")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_tpova")
car_a = NodePath("VBoxContainer/Control/Simulation/StartingPosition/CarA")
car_b = NodePath("VBoxContainer/Control/Simulation/StartingPosition/CarB")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Start"

[node name="PauseButton" type="Button" parent="VBoxContainer/Toolbar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Pause"

[node name="ResetButton" type="Button" parent="VBoxContainer/Toolbar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Reset"

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="Simulation" parent="VBoxContainer/Control" instance=ExtResource("2_e5q61")]
process_mode = 1

[node name="StartingPosition" parent="VBoxContainer/Control/Simulation" index="1"]
position = Vector2(56, 153)

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Properties" type="HBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="PropertiesA" parent="VBoxContainer/TabContainer/Properties" instance=ExtResource("3_p70h6")]
unique_name_in_owner = true
layout_mode = 2

[node name="PropertyLabels" type="VBoxContainer" parent="VBoxContainer/TabContainer/Properties"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PositionLabel" type="Label" parent="VBoxContainer/TabContainer/Properties/PropertyLabels"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
text = "Position
m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VelocityLabel" type="Label" parent="VBoxContainer/TabContainer/Properties/PropertyLabels"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
text = "Velocity
m/s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AccelerationLabel" type="Label" parent="VBoxContainer/TabContainer/Properties/PropertyLabels"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
text = "Acceleration
m/s^2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PropertiesB" parent="VBoxContainer/TabContainer/Properties" instance=ExtResource("3_p70h6")]
unique_name_in_owner = true
layout_mode = 2
h_flip = true

[node name="Graphs" parent="VBoxContainer/TabContainer" instance=ExtResource("4_cl0n0")]
visible = false
layout_mode = 2

[editable path="VBoxContainer/Control/Simulation"]
